<resources>
    <string name="app_name">Timeless</string>
    <string name="grant_hello">Welcome to Timeless! A Wakatime client for Android.</string>
    <string name="grant_help">All you have to do to connect Timeless to your WakaTime account is click the button below! I want to assure you I will not have access to your credentials.</string>
    <string name="grantAccess">Grant access</string>
    <string name="checkingWakatimePermissions">Checking permissions. Please wait…</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="errorMessage">Failed loading data. Pull to refresh or restart the application!</string>
    <string name="support">Support</string>
    <string name="commits">Commits</string>
    <string name="projects">Projects</string>
    <string name="donate">Donate</string>
    <string name="loadingData">Loading data. Please wait…</string>
    <string name="dailyTimeSpent"><![CDATA[<b>Daily on average:</b>]]>  %s</string>
    <string name="last7DaysTimeSpent"><![CDATA[<b>Last 7 days:</b>]]> %s</string>
    <string name="findMe">Find me</string>
    <string name="today">Today</string>
    <string name="noData">Nothing to show here.</string>
    <string name="selectRange">Select range</string>
    <string name="writeExternalStorageRequest_title">Write external storage permission</string>
    <string name="writeExternalStorageRequest_message">To save the chart image, the app needs to write to the external storage</string>
    <string name="imageSavedTo">The image has been saved to %s</string>
    <string name="watermark">Made with Timeless, a Wakatime client</string>
    <string name="filterByLanguage">Filter by language</string>
    <string name="unsetFilter">Remove filter</string>
    <string name="rank"><![CDATA[<b>Rank:</b>]]> %d</string>
    <string name="dailyStats">Daily stats</string>
    <string name="selectDay">Select day</string>
    <string name="selectStartDate">Select start date</string>
    <string name="selectEndDate">Select end date</string>
    <string name="commitAuthor"><![CDATA[<b>Author:</b>]]> %s</string>
    <string name="commitHash"><![CDATA[<b>Hash:</b>]]> %s</string>
    <string name="commitDate"><![CDATA[<b>Date:</b>]]> %s</string>
    <string name="commitReference"><![CDATA[<b>Git reference:</b>]]> %s</string>
    <string name="commitTimeSpent"><![CDATA[<b>Time spent:</b>]]> %s</string>
    <string name="failedLoading">Failed loading data.</string>
    <string name="failedCheckingWakatimePermissions">Failed checking permissions!</string>
    <string name="failedRefreshingToken">Failed refreshing the token!</string>
    <string name="userNotFound">You have not been found.</string>
    <string name="failedSavingImage">Failed saving the chart image!</string>
    <string name="writeDenied">You have denied the write permission.</string>
    <string name="network">Network</string>
    <string name="enableCache">Enable cache</string>
    <string name="enableCacheSummary">Short term cache (to save data)</string>
    <string name="failedLoading_reason">Failed loading: %s</string>
    <string name="selectedBranches"><![CDATA[<b>Selected branches:</b>]]> %s</string>
    <string name="selectBranches">Select branches</string>
    <string name="apply">Apply</string>
    <string name="noBranchesSelected">Selected at least one branch!</string>
    <string name="languages">Languages</string>
    <string name="editors">Editors</string>
    <string name="operatingSystems">Operating systems</string>
    <string name="branches">Branches</string>
    <string name="files">Files</string>
    <string name="periodActivity">Period activity</string>
    <string name="allLanguages">All languages</string>
    <string name="publicLeaderboard">Public leaderboard</string>
    <string name="privateLeaderboards">Private leaderboards</string>
    <string name="noPrivateLeaderboards">You have no private leaderboards.</string>
    <string name="general">General</string>
    <string name="customRangeStats">Custom range stats</string>
    <string name="prevDay">Previous day</string>
    <string name="nextDay">Next day</string>
    <string name="machines">Machines</string>
    <string name="project">Project</string>
    <string name="goToProject">Go to project</string>
    <string name="weeklyAverage_better">Whoa! You are improving the weekly average.</string>
    <string name="weeklyAverage_worse">Ouch! You are not doing so well on the weekly average.</string>
    <string name="weeklyAverage_ok">That\'s fine, I guess. This is the weekly average.</string>
    <string name="shareChartImage">Share chart image</string>
    <string name="done">Done</string>
    <string name="showCodingActivityFor">Show coding activity for</string>
    <string name="configureWidget">Configure widget</string>
    <string name="lifetimeStats">Lifetime stats</string>
    <string name="lifetimeStatsNotUpdated">Lifetime stats are not up to date, check back later.</string>
    <string name="lifetimeStatsTotal">Your lifetime coding activity is <![CDATA[<b>%s</b>]]>.</string>
    <string name="lifetimeStatsTotalWithDays">Your lifetime coding activity is <![CDATA[<b>%s</b>]]> (or <![CDATA[<b>%.2f days</b>]]>).</string>
    <string name="lifetimeStatsProject">%s: <![CDATA[<b>%s</b>]]></string>
    <string name="lifetimeStatsProjectWithDays">%s: <![CDATA[<b>%s</b>]]> (or <![CDATA[<b>%.2f days</b>]]>)</string>
    <string name="lifetimeStatsProjectLoading">%s: loading…</string>
    <string name="or">Or</string>
    <string name="grant_advanced_help">Connect your Wakapi account (an open-source alternative of WakaTime) with your API key.</string>
    <string name="connect">Connect</string>
    <string name="apiKey">API key</string>
    <string name="apiBaseUrl">API base URL</string>
    <string name="missingApiKey">The API key is missing!</string>
    <string name="missingApiUrl">The API base URL is missing!</string>
    <string name="invalidApiUrl">The API base URL is invalid!</string>
    <string name="noProjectsWithRepo">There are no projects with repositories!</string>
    <string name="cannotDisplayProjectsLifetimeStats">Cannot display your projects lifetime stats!</string>
    <string name="lifetimeStatsLoading">Lifetime stats are being computed… Please check back in a few minutes.</string>
    <plurals name="members">
        <item quantity="one">%d member</item>
        <item quantity="other">%d members</item>
    </plurals>
</resources>
